Add the front end to allowing the user to change the aspect numbering for each appearance.